improving auto-running benchmark

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "watchboy": "0.0.2"
   },
   "devDependencies": {
+    "chalk": "^2.4.2",
     "del": "^5.0.0",
     "rootrequire": "^1.0.0",
+    "slash": "^3.0.0",
     "touch": "^3.1.0"
   },
   "scripts": {
