--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "chokidar": "^3.0.2",
     "gaze": "^1.1.3",
-    "watchboy": "0.0.2"
+    "watchboy": "0.0.3"
   },
   "devDependencies": {
     "chalk": "^2.4.2",
@@ -17,7 +17,8 @@
     "touch": "^3.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node start.js"
   },
   "repository": {
     "type": "git",
