--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "chokidar": "^3.0.2",
     "gaze": "^1.1.3",
-    "watchboy": "0.0.3"
+    "watchboy": "https://github.com/catdad/watchboy/tarball/8a386616207ee8c3dff48e75f27e34c4ee6b0398"
   },
   "devDependencies": {
     "chalk": "^2.4.2",
