--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "devDependencies": {
     "chalk": "^2.4.2",
     "del": "^5.0.0",
+    "lodash.padstart": "^4.6.1",
     "mkdirp": "^0.5.1",
+    "pretty-bytes": "^5.3.0",
     "rootrequire": "^1.0.0",
     "slash": "^3.0.0",
     "touch": "^3.1.0"
