--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "dependencies": {
     "chokidar": "^3.0.2",
     "gaze": "^1.1.3",
-    "watchboy": "https://github.com/catdad/watchboy/tarball/027c62ce5bbd148043665d567f0df7580d204225"
+    "watchboy": "https://github.com/catdad/watchboy/tarball/907f1a3b43b4d353f73f6246f69c64af95999dad"
   },
   "devDependencies": {
     "chalk": "^2.4.2",
     "del": "^5.0.0",
+    "get-folder-size": "^2.0.1",
     "lodash.padstart": "^4.6.1",
     "mkdirp": "^0.5.1",
     "pretty-bytes": "^5.3.0",
