--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,20 +3,20 @@
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
-trigger:
-- master
-
 strategy:
  matrix:
   linux:
-    vmImage: 'ubuntu-18.04'
+    imageName: 'ubuntu-18.04'
     node_version: 10.x
   macos:
-    vmImage: 'macOS-10.13'
+    imageName: 'macOS-10.13'
     node_version: 10.x
   windows:
-    vmImage: 'vs2017-win2016'
+    imageName: 'vs2017-win2016'
     node_version: 10.x
+
+pool:
+ vmImage: $(imageName)
 
 steps:
 - task: NodeTool@0
