--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,13 +7,13 @@ strategy:
  matrix:
   linux:
     imageName: 'ubuntu-16.04'
-    node_version: 10.x
+    nodeVersion: 10.x
   macos:
-    imageName: 'macOS-10.13'
-    node_version: 10.x
+    imageName: 'macOS-10.14' # Mojave
+    nodeVersion: 10.x
   windows:
-    imageName: 'vs2017-win2016'
-    node_version: 10.x
+    imageName: 'windows-2019'
+    nodeVersion: 10.x
 
 pool:
  vmImage: $(imageName)
@@ -21,7 +21,7 @@ pool:
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: $(node_version)
+    versionSpec: $(nodeVersion)
   displayName: 'Install Node.js'
 
 - script: |
