--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chalk": "^2.4.2",
     "count-files": "^2.6.2",
     "del": "^5.0.0",
+    "eslint": "^5.16.0",
     "get-folder-size": "^2.0.1",
     "lodash.padstart": "^4.6.1",
     "mkdirp": "^0.5.1",
