--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "^5.16.0",
     "fancy-text-table": "^1.0.0",
     "get-folder-size": "^2.0.1",
+    "grandma": "^0.9.0",
     "lodash.padstart": "^4.6.1",
     "mkdirp": "^0.5.1",
     "pretty-bytes": "^5.3.0",
