--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "eslint": "^5.16.0",
     "fancy-text-table": "^1.0.0",
     "get-folder-size": "^2.0.1",
-    "grandma": "https://github.com/catdad/grandma/tarball/6fe70943de5d2d4da6f3892fe0ad1277b81eb8b8",
+    "grandma": "https://github.com/catdad/grandma/tarball/86084d3da7fd6ac0753039f6891fdf032a33a86b",
     "lodash.padstart": "^4.6.1",
     "mkdirp": "^0.5.1",
     "pretty-bytes": "^5.3.0",
     "rootrequire": "^1.0.0",
     "slash": "^3.0.0",
+    "stream-array": "^1.1.2",
+    "through2": "^2.0.1",
     "touch": "^3.1.0"
   },
   "scripts": {
