--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "scripts": {
     "lint": "eslint benchmarks lib *.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node runner.js"
+    "start": "node runner.js",
+    "testlist": "grandma list"
   },
   "repository": {
     "type": "git",
