--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mkdirp": "^0.5.1",
     "node-fetch": "^2.6.0",
     "pretty-bytes": "^5.3.0",
+    "pretty-ms": "^5.0.0",
     "rootrequire": "^1.0.0",
     "slash": "^3.0.0",
     "through2": "^2.0.1",
