trying to increase watch limit in linux build

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,7 @@ strategy:
       nodeVersion: 10.x
       script: |
         cat /etc/os-release
+        echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p
         npm install
         echo =======================================================
         npm start
