--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,11 @@ matrix:
       before_install:
         # get version
         - system_profiler SPSoftwareDataType
+        # increase file handles, according to watchman
+        # https://facebook.github.io/watchman/docs/install.html#mac-os-file-descriptor-limits
+        # necessary on 10.6 and earlier
+        - sudo sysctl -w kern.maxfiles=10485760
+        - sudo sysctl -w kern.maxfilesperproc=1048576
     - os: windows
       node_js: 10
       env:
