--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,8 +22,14 @@ strategy:
       # necessary on 10.6 and earlier
       script: |
         system_profiler SPSoftwareDataType
-        sudo sysctl -w kern.maxfiles=10485760
-        sudo sysctl -w kern.maxfilesperproc=1048576
+        sudo sysctl -w kern.maxfiles=64000
+        sudo sysctl -w kern.maxfilesperproc=64000
+        ulimit -n
+        ulimit -S -n 64000
+        ulimit -n
+        launchctl limit maxfiles
+        launchctl limit maxfiles 64000 524288
+        launchctl limit maxfiles
         npm install
         echo =======================================================
         npm start
