--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "chokidar": "^3.1.1",
+    "chokidar": "^3.3.1",
     "gaze": "^1.1.3",
-    "watchboy": "https://github.com/catdad/watchboy/tarball/0a4527c820265a905911e00c8be915659de68194"
+    "watchboy": "^0.4.1"
   },
   "devDependencies": {
     "chalk": "^2.4.2",
