--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "chokidar": "^3.3.1",
     "gaze": "^1.1.3",
+    "sane": "^4.1.0",
     "watchboy": "^0.4.1"
   },
   "devDependencies": {
